docs: make slider visual comparator work on mobile

--- a/docs/test-report.css
+++ b/docs/test-report.css
@@ -66,6 +66,7 @@
 
 		.divider {
 			position: absolute;
+			touch-action: none;
 			width: 2px;
 			height: 100%;
 			background-color: rgba(256, 256, 256, 0.2);
